--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="fill">FILL ALL CELLS</button>
         <button class="fill-empty">FILL EMPTY CELLS</button>
         <button class="clear">CLEAR ALL CELLS</button>
+        <p>hello</p>
       </section>
     </main>
   </body>
